--- a/index.html
+++ b/index.html
@@ -5,10 +5,8 @@
 	</head>
 	<body>
 		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-    		</ul>
+			<a href="/">Home</a>
+			<a href="/about">About</a>
 		</nav>
     <p>This is the home page.</p>
 		<footer>
