--- a/updates.html
+++ b/updates.html
@@ -118,6 +118,7 @@
                         <p class="BDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent euismod ultrices ante, ac laoreet nulla vestibulum adipiscing. Nam quis justo in augue auctor imperdiet.</p>
                     </li>
                 </ul>
+                <p><a href="https://newsapi.org/">Powered By News API</a></p>
         </div>
 
     </section>
