--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>Lisgar Sports Analytics</title>
+<title>Lisgar Sports Analytics Society</title>
+<meta name="description" content="We are a school club at Lisgar Collegiate Institute who are 
+interested in the quantitative analysis of sports.">
+<meta name="keywords" content="sports, sports analytics, Lisgar Collegiate Institute, Austin Zhu Ottawa, 
+Austin Zhu Lisgar, Lisgar clubs, Lisgar sports">
+</head>
+
 <style>
     @import "nav.css";
     #title {
