--- a/blog.html
+++ b/blog.html
@@ -260,6 +260,7 @@
             
         </section>
     </section>
+    <iframe src="footer.html" width=100%, height="200px" frameborder="0"></iframe>
 
 
 <script>
