--- a/calender.html
+++ b/calender.html
@@ -36,6 +36,7 @@
         <iframe src="https://calendar.google.com/calendar/embed?src=lcisportsanalytics%40gmail.com&ctz=America%2FToronto" 
                 style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
     </div>
+    <iframe src="footer.html" width=100%, height="200px" frameborder="0"></iframe>
 
 
 
