--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <a class="active" href="contact.html">Contact Us</a>
     </div>
     <iframe src="header.html" width=100%, frameborder="0"></iframe>
-
+    <iframe src="footer.html" width=100%, height="200px" frameborder="0"></iframe>
 
 
 <script>
