--- a/index.html
+++ b/index.html
@@ -151,9 +151,6 @@ Austin Zhu Lisgar, Lisgar clubs, Lisgar sports">
         padding-bottom: 80px;
         margin-bottom: 10px;
     }
-    #footer {
-        height: 160px;
-    }
 
 </style>
 
@@ -235,9 +232,7 @@ Austin Zhu Lisgar, Lisgar clubs, Lisgar sports">
         </div>
         
     </section>
-    <section id="footer">
-    
-    </section>
+    <iframe src="footer.html" width=100%, height="200px" frameborder="0"></iframe>
 
 
 
