--- a/jobs.html
+++ b/jobs.html
@@ -24,6 +24,7 @@
         <a href="contact.html">Contact Us</a>
     </div>
     <iframe src="header.html" width=100%, frameborder="0"></iframe>
+    <iframe src="footer.html" width=100%, height="200px" frameborder="0"></iframe>
 
 
 
