--- a/updates.html
+++ b/updates.html
@@ -147,7 +147,7 @@
             <p id="source"><a href="https://newsapi.org/">Powered By News API</a></p>
 
     </section>
-
+    <iframe src="footer.html" width=100%, height="200px" frameborder="0"></iframe>
 
 
 <script>
