--- a/footer.html
+++ b/footer.html
@@ -71,8 +71,8 @@
     </div>
     <div id="c">
         <a target="_parent" href="index.html" class="SMLink">Twitter</a>
-        <a target="_parent" href="index.html" class="SMLink">Instagram</a>
-        <a target="_parent" href="index.html" class="SMLink">Snap Chat</a>
+        <a target="_parent" href="https://www.instagram.com/lcisportsanalytics/?hl=en" class="SMLink">Instagram</a>
+        <a target="_parent" href="https://www.facebook.com/" class="SMLink">Facebook</a>
     </div>
 
 <script>
