--- a/members.html
+++ b/members.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>Lisgar Sports Analytics</title>
+<title>Lisgar Sports Analytics - Members</title>
 <style>
     @import "nav.css";
     #content {
