--- a/updates.html
+++ b/updates.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<title>Lisgar Sports Analytics</title>
+<title>Lisgar Sports Analytics - Updates</title>
 <style>
     @import "nav.css";
 
